# holiday-trivia

./: .coverage  .gitignore  README.md  drop_hidden_prompt.py  export_questions.py  farewell_party_placeholder.txt  import_questions.py  load_test_report_20251212_134157.json  nginx.conf  populate_sample_answers.py  populate_sample_data.py  project-brief.md  pyproject.toml
backend/: main.py  models.py  pyproject.toml  quiz_game.db  requirements.txt  settings.yaml
database/: allhands_trivia.db  warmup_trivia.db
doc/: allhands_triva_new.json  allhands_trivia.json  chona_questions.json  orignal_questions.json  warmup_trivia.json
frontend/: admin.html  admin.js  app.js  index.html  sounds.js  styles.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/integration_tests/: test_websockets.py
tests/load_tests/: interactive_load_test.py  locustfile.py  monitoring.py  test_scenarios.py
tests/unit_tests/: test_models.py  test_scoring.py
