[project]
name = "all-hands-quiz"
version = "0.1.0"
description = "All-Hands Quiz Game with real-time multiplayer support"
requires-python = ">=3.9"
dependencies = [
    # Backend dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "python-multipart==0.0.6",
    "sentence-transformers>=0.4",
    "word2number>=1.1",
    "pyyaml>=6.0",
    # Test dependencies
    "pytest>=8.4.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "locust>=2.15.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
